Fix 'OutOfMemoryError : PermGen space' during tests with Eclipse 3.6 target-platform
git-svn-id: https://svn.codehaus.org/sonar-ide/trunk/eclipse@484 99cbfe3a-a47d-0410-a3ab-d8de1ee668d8